<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".View.Add_Items">




        <ImageView
            android:id="@+id/add_cust_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/back_icon" />






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_bold"
            android:layout_gravity="center"
            android:text="ADD Items"
            android:textAllCaps="true"

            android:textColor="@color/black"

            android:textSize="20sp" />



    <ImageView
        android:id="@+id/Item_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        app:srcCompat="@drawable/gallery_icon" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <EditText
                android:id="@+id/name_item"
                android:layout_width="match_parent"
                android:textColorHint="#737070"
                android:layout_height="wrap_content"
                android:textAlignment="center"

                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="Name of Item"
                >

            </EditText>
            <EditText
                android:id="@+id/id_item"
                android:layout_width="match_parent"

                android:textColorHint="#737070"

                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="ID of Item"
                >

            </EditText>



            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scan ID of item"
                app:iconTint="#A55D5D" />


            <EditText
                android:id="@+id/descrption_item"
                android:layout_width="match_parent"

                android:textColorHint="#737070"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="Description of Item"
                >

            </EditText>
            <EditText
                android:id="@+id/quantity_item"
                android:layout_width="match_parent"
                android:textColorHint="#737070"
                android:textAlignment="center"

                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="Quantity of Item"
                >

            </EditText>
            <EditText
                android:id="@+id/price_item"
                android:layout_width="match_parent"
                android:textColorHint="#737070"
                android:textAlignment="center"

                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="Price of Item"
                >

            </EditText>
            <EditText
                android:id="@+id/Date_item"
                android:layout_width="match_parent"
                android:textColorHint="#737070"
                android:textAlignment="center"

                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:hint="Expired Date of Item  (dd/mm/yyyy)"
                >
            </EditText>
            <Button
                android:id="@+id/add_cust_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="Add Item"
                android:background="@color/black"
                android:textColor="@color/white"
                android:onClick="AddItems"
                android:elevation="5dp"
                >

            </Button>
        </LinearLayout>
</LinearLayout>