<resources>
    <string name="app_name">EZ-Store</string>
    <string name="NoInternet">Opps .. There\'s no internet connection</string>
    <string name="LoginSplash">Login</string>
    <string name="RegisterSplash">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginButton">Login</string>
    <string name="RememberMeText">Remember Me</string>
    <string name="Forgot">Forgot Email/Password ?</string>
...
    <string name="Resend">Resend</string>
    <string name="codeVerificationButton">Verify Code</string>
    <string name="EnterCodeText">Enter the code sent on</string>
    <string name="wrongPhone">isn\'t your phone number ?</string>
    <string name="SendCode">Send Code</string>
    <string name="verificationCompleted">Verification Completed</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
...
